@startuml
!pragma layout smetana

package domain.Sensor {

      interface SensorFactory {
            + createSensor(deviceID : DeviceID, modelPath : ModelPath, sensorTypeID : SensorTypeID, sensorName : SensorName, gps: GPS): Sensor
        }

      class SensorFactoryImpl {
            + createSensor(deviceID : DeviceID, modelPath : ModelPath, sensorTypeID : SensorTypeID, sensorName : SensorName, gps: GPS): Sensor
        }

    interface Sensor {
        + getID(): SensorID
        + getName(): SensorName
        + getModelPath(): ModelPath
        + getSensorTypeID(): SensorTypeID
        + getDeviceID(): DeviceID
        + getValue(): ValueObject
        + toString(): String
    }

package domain.Sensor.SunsetTimeSensor {

    class domain.Sensor.SunsetTimeSensor.SunsetTimeSensor <<entity>> <<Root>> {
        - _modelPath : ModelPath
        - _sensorName : SensorName
        - _sensorID : SensorID
        - _sensorTypeID : SensorTypeID
        - _sunsetTimeValue : SunsetTimeSensorValue
        - _deviceID : DeviceID
        - _gps : GPS

        + SunsetTimeSensor(deviceID : DeviceID, modelPath : ModelPath, sensorTypeID : SensorTypeID, sensorName : SensorName, gps: GPS)
        + getID () : SensorID
        + getName () : SensorName
        + getModelPath () : ModelPath
        + getSensorTypeID () : SensorTypeID
        + getValue () : ValueObject
        + getDeviceID () : DeviceID
    }
    class GPS <<ValueObject>> {
        - _latitude: double
        - _longitude: double
        + GPS(latitude : double, longitude : double)
        + getLatitude() : double
        + getLongitude() : double
}
     class SensorName <<ValueObject>> {
            - _name: String
            + SensorName(name : String)
            + getName() : String
        }

        class SensorID <<DomainID>> {
                  - _id: String
                  + SensorID(sensorID : String)
                  + getID() : String
             }

    class SensorTypeID <<DomainID>> {
        - _id : String
        + SensorTypeID(sensorTypeID : String)
        + getID() : String
    }

  class SunsetTimeSensorValue <<ValueObject>> {
    - _sunsetTimeSensorValue : LocalTime
    + SunsetTimeSensorValue(sunsetTimeSensorValue : LocalTime)
    + toString() : String
  }
    class ModelPath <<DomainID>> {
        - _path: String
        + ModelPath(path : String)
        + getPath() : String
    }

    class DeviceID <<DomainID>> {
        - _id: String
        + DeviceID(id : String)
        + getID() : String
    }
}

package domain.ddd {

  interface DomainEntity {
  }

  interface DomainID {
  }

  interface AggregateRoot {
  }

 interface ValueObject {
  }
}

SensorFactoryImpl ..|> SensorFactory
SensorFactoryImpl "1" ..> "1" domain.Sensor.SunsetTimeSensor.SunsetTimeSensor : creates

domain.Sensor.SunsetTimeSensor.SunsetTimeSensor ..|> domain.Sensor.Sensor
domain.Sensor.SunsetTimeSensor.SunsetTimeSensor "1" --> "1" domain.Sensor.SunsetTimeSensor.SunsetTimeSensorValue : has
domain.Sensor.SunsetTimeSensor.SunsetTimeSensor "1" -->  "1" SensorTypeID : has
domain.Sensor.SunsetTimeSensor.SunsetTimeSensor "1" -->  "1" SensorID : has
domain.Sensor.SunsetTimeSensor.SunsetTimeSensor "1" -->  "1" DeviceID : has
domain.Sensor.SunsetTimeSensor.SunsetTimeSensor "1" -->  "1" ModelPath : has
domain.Sensor.SunsetTimeSensor.SunsetTimeSensor "1" -->  "1" SensorName : has
domain.Sensor.SunsetTimeSensor.SunsetTimeSensor "1" -->  "1" GPS : has

domain.Sensor.SunsetTimeSensor.SunsetTimeSensorValue ..|> domain.ddd.ValueObject
SensorName ..|> domain.ddd.ValueObject

DomainEntity --|> DomainID
AggregateRoot --|> DomainEntity

domain.Sensor.Sensor ..|> domain.ddd.AggregateRoot

SensorTypeID ..|> domain.ddd.DomainID
SensorID ..|> domain.ddd.DomainID
ModelPath ..|> domain.ddd.DomainID
DeviceID ..|> domain.ddd.DomainID
domain.ddd.DomainID --|> domain.ddd.ValueObject

@enduml